<resources>

    <string name="app_name">NVMoverioSPAAM</string>
    <string name="def_TCPButton">TCP/IP Start</string>
    <string name="def_ipAddress">IP Address</string>
    <string name="def_TCPDisp">Message</string>
    <string name="def_CancelButton">Cancel Last</string>
    <string name="def_ReadButton">Read File</string>
    <string name="def_WriteButton">Write File</string>
    <string name="def_ModifyButton">Modify</string>
    
</resources>
